# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
src/: GameOfLife.cpp  GameOfLife.hpp  main.cpp
